# aims

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: codacy-analysis.yaml
src/: lib.rs
src/oauth2/: mod.rs
src/scim/: mod.rs
src/scim/v2/: mod.rs
src/scim/v2/schema/: core.rs  mod.rs  user.rs
src/scim/v2/static/json/: EnterpriseUser.json
